testsuite/tests/aggregate/invalid-checks/abstr.gpr
abstract project Abstr is

end Abstr;
